# render

./: .gitignore  Bezier.cpp  Bezier.h  CMakeLists.txt  Camera.h  Color.h  Film.h  Grain.h  Light.h  Material.h  Object.h  PathTracing.cpp  PathTracing.h  PureColor.h  Render.h  Scene.h  Sphere.cpp  Sphere.h  float3.cpp  float3.h  int4.h  main.cpp
mesh/: Untitled-1.txt
